# JobScraper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  package-windows.yml
docs/: ARCHITECTURE.md  codebase_map.md  manual_source_check.md  ui_validation.md  ui_workbench.md
installer/: JobScraper.iss
src/jobscraper/: __init__.py  __main__.py  bootstrap.py  paths.py
src/jobscraper/ai/: __init__.py  client.py  roadmap.py
src/jobscraper/resources/: company_sources.json  source_watchlist.json
src/jobscraper/runtime/: __init__.py  helper_main.py  trace_viewer.py
src/jobscraper/scraping/: __init__.py  core.py  hackernews.py
src/jobscraper/storage/: __init__.py  db.py  fs.py
src/jobscraper/ui/: __init__.py  main.py  models.py  panes.py  renderers.py  tasks.py  theme.py  utils.py  window.py  workbench_ui.py  workers.py
tests/: test_bootstrap.py  test_fs.py  test_packaging.py  test_paths.py  test_scraping_core.py  test_source_discovery.py  test_storage_db.py  test_ui_performance_paths.py  test_ui_smoke.py  test_ui_tasks.py
tools/: check_repo_hygiene.py
