[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "JobScraper"
version = "0.1.0"
description = "Windows-first PyQt desktop workbench for scraping job sources and managing job-search workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp",
  "PyQt6",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.0",
]
test = [
  "pytest>=8.0",
]

[project.scripts]
jobscraper = "jobscraper.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jobscraper = ["resources/*.json", "assets/*"]
